fixed high score alignment

--- a/assets/style.css
+++ b/assets/style.css
@@ -35,7 +35,7 @@ input{
 
     button {
     display: inline-block;
-    font-family: sans-serif;
+    font-family: 'Times New Roman', Times, serif;
     background-color: #52bca9;
     border-radius: 10px;
     border: 3px double #c09f9f;
@@ -117,7 +117,7 @@ input{
     height: 1.75rem;
 }
 
-#highscoreNameInput{
+#highScoreNameInput{
     display: inline-block;
     padding-left: 9.5rem;
     font-family: 'Times New Roman', Times, serif;
